--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:200i,400&display=swap');
+:root {
+    --color-white: #f3f3f3;
+    --color-darkblue: #1b1b32;
+    --color-darkblue-alpha: rgba(27, 27, 50, 0.8);
+    --color-green: #37af65;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body{
-    background-color: rgb(228, 158, 18);
-    width: 100%;
-    height: auto;
+    background-color: aqua;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
 }
