--- a/style.css
+++ b/style.css
@@ -1,19 +1,68 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200i,400&display=swap');
+
 :root {
-    --color-white: #f3f3f3;
-    --color-darkblue: #1b1b32;
-    --color-darkblue-alpha: rgba(27, 27, 50, 0.8);
-    --color-green: #37af65;
+  --color-white: #f3f3f3;
+  --color-darkblue: #1b1b32;
+  --color-darkblue-alpha: rgba(27, 27, 50, 0.8);
+  --color-green: #37af65;
 }
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
-body{
-    background-color: aqua;
-    font-family: 'Poppins',sans-serif;
-    font-weight: 400;
-    font-size: 1rem;
+body {
+  background-color: #2417b6;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  color: var(--color-white);
+  margin: 0;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  background-color: var(--color-darkblue);
+  background-image: linear-gradient(115deg,
+      rgba(58, 58, 158, 0.8),
+      rgba(136, 136, 206, 0.7)),
+    url(img/background.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#container{
+  width: 100%;
+  margin: 3.125rem auto 0 auto;
+}
+@media(min-width:576px){
+  #container{
+    max-width: 540px;
+  }
+}
+@media (min-width:768px) {
+  #container{
+    max-width: 720px;
+  }
+}
+#title,
+#description {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+
+#title{
+  font-weight: 200;
+  font-style: italic;
+  text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);;
 }
