--- a/style.css
+++ b/style.css
@@ -19,22 +19,52 @@ a{
     background-color: gray;
     position: fixed;
     width: 100%;
-    height: 75px;
+    min-height: 75px;
     top: 0;
     left: 0;
     display: flex;
+    align-items: center;
     justify-content: space-around;
+    padding: 0px 20px;
 }
+@media (max-width: 600px) {
+    header {
+      flex-wrap: wrap;
+    }
+  }
 
 #header-img {
+    width: 60vw;
+}
+
+@media (max-width:650px){
+    #header-img{
+        width: 100%;
+        position: relative;
+    }
+}
+#header-img > img{
     width: 100%;
     height: 100%;
     max-width: 300px;
-    display: flex;
     margin-left: 20px;
-    position: relative;
-}
-#nav-bar{
-    position: absolute;
+    border: aqua solid;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+@media (max-width: 650px) {
+    #header-img > img {
+      margin: 0 auto;
+    }
+  }
+#nav-bar{
+    font-weight: 400;
+}
+#nav-bar > ul{
+    width: 35vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
